--- a/admin-config.json
+++ b/admin-config.json
@@ -1,4 +1,4 @@
 {
-  "username": "admin",
-  "passwordHash": "$2b$10$VXECr1BnGblTcHXChH08NexYWEueBgPz9qz8wc2d7d4uh3tOJ6eZ2"
+  "username": "thuylinh2002",
+  "passwordHash": "thuylinh2002@"
 }
