Update password hash in admin-config.json

--- a/admin-config.json
+++ b/admin-config.json
@@ -1,4 +1,4 @@
 {
   "username": "thuylinh2002",
-  "passwordHash": "thuylinh2002@"
+  "passwordHash": "$2a$12$tAfqLG4wn4Ege5txkPuLDeARAjfn7eI3WMAZydNXpI5PlEbUlIXcW"
 }
